--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .vscode/
-config.json
-openai.key
 __pycache__/
-sandbox.py
-flask_example.py
+tldrgpt_env
 tldrgpt_server_key.pem
+openai.key
+config.json
