--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .vscode/
+env/
 __pycache__/
-tldrgpt_env
-tldrgpt_server_key.pem
-openai.key
+
 config.json
+openai.key
+tldrgpt_server_key.pem
+
+gptldr_youtube.py
